# ES-DE

./: .clang-format  .gitignore  .gitmodules  ANDROID-DEV.md  ANDROID.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  DEVNOTES.md  FAQ-ANDROID.md  FAQ.md  GAMELISTS.md  HAIKU.md  INSTALL-DEV.md  INSTALL.md  LICENSE  LICENSE.md  LSAN_suppressions  NEWS.md  README.md  RELEASES.md  ROADMAP.md  RetroDECK-Artifact-cooker.sha  SYSTEMS.md  THEMES-DEV.md  THEMES-LEGACY.md  THEMES.md  TRANSLATIONS.md  USERGUIDE-DEV.md  USERGUIDE.md  es-de-module.yml  latest_release.json  manifest-header.yml  net.retrodeck.es-de.yml  tree.html  update_from_upstream.sh
es-app/: CMakeLists.txt
es-app/assets/: ES-DE.rc  ES-DE_DS_Store  ES-DE_Info.plist  ES-DE_LICENSE_Windows  ES-DE_LICENSE_macOS  EmulationStation-DE.icns  EmulationStation-DE_DS_Store  EmulationStation-DE_Info.plist  EmulationStation-DE_LICENSE_Windows  EmulationStation-DE_LICENSE_macOS  EmulationStation.rc  EmulationStation_DS_Store  Windows_Portable_DO_NOT_PLACE_YOUR_THEMES_HERE.txt  Windows_Portable_README.txt  emulationstation.desktop  es_de-3.1.0.recipe  icu_filters.json  latest_steam_deck_appimage.txt  latest_steam_deck_prerelease_appimage.txt  libintl_Windows.h  org.es_de.emulationstation-de.appdata.xml  org.es_de.emulationstation-de.desktop  org.es_de.emulationstation-de.yml  org.es_de.frontend.appdata.xml  org.es_de.frontend.desktop  org.es_de.frontend.yml  snap-launcher.sh
es-app/src/: ApplicationUpdater.cpp  ApplicationUpdater.h  ApplicationVersion.h  CollectionSystemManager.cpp  CollectionSystemManager.h  CollectionSystemsManager.cpp  CollectionSystemsManager.h  EmulationStation.h  EmulationStation.rc  FileData.cpp  FileData.h  FileFilterIndex.cpp  FileFilterIndex.h  FileSorts.cpp  FileSorts.h  Gamelist.cpp  Gamelist.h  GamelistFileParse.cpp  GamelistFileParse.h  GamelistFileParser.cpp  GamelistFileParser.h  MediaViewer.cpp  MediaViewer.h  MetaData.cpp  MetaData.h  MiximageGenerator.cpp  MiximageGenerator.h  PDFViewer.cpp  PDFViewer.h  PlatformId.cpp  PlatformId.h  Screensaver.cpp  Screensaver.h  SystemData.cpp  SystemData.h  SystemScreenSaver.cpp  SystemScreenSaver.h  SystemScreensaver.cpp  SystemScreensaver.h  UIModeController.cpp  (+5 more)
es-app/src/animations/: LaunchAnimation.h  MoveCameraAnimation.h
es-app/src/components/: AsyncReqComponent.cpp  AsyncReqComponent.h  CarouselComponent.cpp  RatingComponent.cpp  ScraperSearchComponent.cpp  ScraperSearchComponent.h  TextListComponent.cpp  TextListComponent.h
es-app/src/guis/: GuiAlternativeEmulators.cpp  GuiAlternativeEmulators.h  GuiApplicationUpdater.cpp  GuiApplicationUpdater.h  GuiCollectionSystemsOptions.cpp  GuiCollectionSystemsOptions.h  GuiGameScraper.cpp  GuiGameScraper.h  GuiGamelistFilter.cpp  GuiGamelistFilter.h  GuiGamelistOptions.cpp  GuiGamelistOptions.h  GuiGeneralScreensaverOptions.cpp  GuiGeneralScreensaverOptions.h  GuiInfoPopup.cpp  GuiInfoPopup.h  GuiLaunchScreen.cpp  GuiLaunchScreen.h  GuiMediaViewerOptions.cpp  GuiMediaViewerOptions.h  GuiMenu.cpp  GuiMenu.h  GuiMetaDataEd.cpp  GuiMetaDataEd.h  GuiOfflineGenerator.cpp  GuiOfflineGenerator.h  GuiOrphanedDataCleanup.cpp  GuiOrphanedDataCleanup.h  GuiScraperMenu.cpp  GuiScraperMenu.h  GuiScraperMulti.cpp  GuiScraperMulti.h  GuiScraperSearch.cpp  GuiScraperSearch.h  GuiScraperSingle.cpp  GuiScraperSingle.h  GuiScraperStart.cpp  GuiScraperStart.h  GuiScreensaverOptions.cpp  GuiScreensaverOptions.h  (+8 more)
es-app/src/scrapers/: GamesDBJSONScraper.cpp  GamesDBJSONScraper.h  GamesDBJSONScraperResources.cpp  GamesDBJSONScraperResources.h  Scraper.cpp  Scraper.h  ScreenScraper.cpp  ScreenScraper.h
es-app/src/views/: GamelistBase.cpp  GamelistBase.h  GamelistLegacy.h  GamelistView.cpp  GamelistView.h  SystemView.cpp  SystemView.h  UIModeController.cpp  UIModeController.h  ViewController.cpp  ViewController.h
es-core/: CMakeLists.txt
es-core/src/: ApplicationVersion.h  AsyncHandle.h  AudioManager.cpp  AudioManager.h  CECInput.cpp  CECInput.h  GuiComponent.cpp  GuiComponent.h  HelpPrompt.h  HelpStyle.cpp  HelpStyle.h  HttpReq.cpp  HttpReq.h  ImageIO.cpp  ImageIO.h  InputConfig.cpp  InputConfig.h  InputManager.cpp  InputManager.h  Log.cpp  Log.h  MameNames.cpp  MameNames.h  Platform.cpp  Platform.h  PowerSaver.cpp  PowerSaver.h  Scripting.cpp  Scripting.h  Settings.cpp  Settings.h  Sound.cpp  Sound.h  ThemeData.cpp  ThemeData.h  Window.cpp  Window.h  platform.cpp  platform.h
es-core/src/animations/: Animation.h  AnimationController.cpp  AnimationController.h  LambdaAnimation.h  MoveCameraAnimation.h
es-core/src/components/: AnimatedImageComponent.cpp  AnimatedImageComponent.h  BadgeComponent.cpp  BadgeComponent.h  BadgesComponent.cpp  BadgesComponent.h  BusyComponent.cpp  BusyComponent.h  ButtonComponent.cpp  ButtonComponent.h  CarouselComponent.cpp  CarouselComponent.h  ComponentGrid.cpp  ComponentGrid.h  ComponentList.cpp  ComponentList.h  DateTimeComponent.cpp  DateTimeComponent.h  DateTimeEditComponent.cpp  DateTimeEditComponent.h  FlexboxComponent.cpp  FlexboxComponent.h  GIFAnimComponent.cpp  GIFAnimComponent.h  GameSelectorComponent.h  GridTileComponent.cpp  GridTileComponent.h  HelpComponent.cpp  HelpComponent.h  IList.h  ImageComponent.cpp  ImageComponent.h  ImageGridComponent.h  LottieAnimComponent.cpp  LottieAnimComponent.h  LottieComponent.cpp  LottieComponent.h  MenuComponent.cpp  MenuComponent.h  NinePatchComponent.cpp  (+26 more)
es-core/src/guis/: GuiComplexTextEditPopup.cpp  GuiComplexTextEditPopup.h  GuiDetectDevice.cpp  GuiDetectDevice.h  GuiInfoPopup.cpp  GuiInfoPopup.h  GuiInputConfig.cpp  GuiInputConfig.h  GuiMsgBox.cpp  GuiMsgBox.h  GuiTextEditKeyboardPopup.cpp  GuiTextEditKeyboardPopup.h  GuiTextEditPopup.cpp  GuiTextEditPopup.h
es-core/src/math/: Misc.cpp  Misc.h  Transform4x4f.cpp  Transform4x4f.h  Vector2f.cpp  Vector2f.h  Vector2i.cpp  Vector2i.h  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h
es-core/src/renderers/: Renderer.cpp  Renderer.h  RendererOpenGL.cpp  RendererOpenGL.h  (+8 more)
es-pdf-converter/: CMakeLists.txt
es-pdf-converter/src/: ConvertPDF.cpp  ConvertPDF.h  main.cpp
(+3332 files in other folders)
